<resources>
    <string name="app_name"> Cheap Thrills<Ticket></Ticket></string>
    <string name="app_Title"> Cheap Thrills</string>
    <!--<string name="title_activity_drawer">DrawerActivity</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Edit">EDIT</string>
    <string name="Interest">My Interests</string>
    <string name="Addresses">Addresses</string>
    <string name="Add">Add</string>
    <string name="View">View</string>
    <string name="okayemails">Okay to send emails</string>
    <string name="signedOut">You Have Been Signed Out</string>
    <string name="okaymail">Okay to send mail</string>
    <string name="okayAdvertise">Okay to target Social advertising</string>
    <string name="tvCommunicationPrefer">Communication Preferences</string>
    <string name="tvContactInformation">Contact Information</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="titleHome">Home</string>
    <string name="titleOrlando">Universal Orlando</string>
    <string name="createAcoount">Create Account</string>
    <string name="Personal">Personal</string>
    <string name="alreadyHaveAccount">Already have one ?  </string>
    <string name="firstName">First Name</string>
    <string name="fieldsRequired">Fields are required ,unless noted as optional.</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="titleWallet">Wallet</string>
    <string name="stringSignOut">Sign Out</string>
    <string name="titleMyFavourites">My Favorites</string>
    <string name="titleParkNotification">Park Notifications</string>
    <string name="titlehoursAndDirections"><![CDATA[Park Hours & Directions]]></string>
    <string name="titleBlockoutDates">Blockout Dates</string>
    <string name="titleOffers">Special Offers</string>
    <string name="titleBuy">Buy</string>
    <string name="titleorderFood">Order Food and Drinks</string>
    <string name="alertTitle">My Alerts</string>
    <string name="titlecreateanAccount"><u>Create an account</u></string>
    <string name="forgotPassword"><u>Forgot Password</u></string>
    <string name="forgotPassword11">Forgot Password</string>
    <string name="checkboxRememberMe">Remember Me</string>
    <string name="checkboxTermsandPrivacy">I have read and agree to the</string>
    <string name="stringterms"><u>Terms of Service</u></string>
    <string name="and">&amp;</string>
    <string name="privacypolicy"><u>Privacy Policy</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="signIn"><u>Sign in</u></string>
    <string name="signIn11">Sign In</string>
    <string name="enterFirstName">Please enter First name</string>
    <string name="enterLastName">Please enter Last Name</string>
    <string name="enterEmail">Please enter Email</string>
    <string name="enterValidEmail">Please enter valid Email</string>
    <string name="enterPassword">Please enter Mobile no:</string>
    <string name="enterValidPassword">Password must contain more than 7 characters</string>
    <string name="enterTermsPrivacy">Please agree Terms of service Conditions and Privacy policy</string>
    <string name="updates">Please go through updates</string>
    <string name="checkInternet">Please check your internet Connection</string>
    <string name="enterEmailforgot">Enter your email to recover a forgotten password.</string>
    <string name="Submit">SUBMIT</string>
    <string name="somethingWentWrong">Oops! Something must have went wrong, please try again</string>
    <string name="Profile"> My Profile</string>


    <string name="rides">Rides</string>
    <string name="shows">Shows</string>
    <string name="dining">Dining</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="tvPrivacy">Privacy &amp; Legal</string>
    <string name="tvlost">Lost &amp; Found"</string>
    <string name="tvCheckBox">Yes,I would like to recieve updates and special offers from Universal Orlando Resort™</string>
    <string name="tvExplore">"EXPLORE PARKS &amp; HOTELS"</string>
    <string name="Tickets">Tickets</string>
    <string name="expressPass">Express Pass</string>
    <string name="extras">Extras</string>
    <string name="timing1">9AM - 8PM</string>
    <string name="timing3">10AM - 5PM</string>
    <string name="themeParks">Theme Parks</string>
    <string name="UniversalCityWalk">Universal CityWalk</string>
    <string name="sitehotels">On-site Hotels</string>
    <string name="thingstoDo">Things to Do</string>
    <string name="island">Islands of Adventure</string>
    <string name="universalStudios">Universal Studios</string>
    <string name="universalVolcano">Universal\'s Volcano Bay</string>
    <string name="events">Events</string>
    <string name="shopping">Shopping</string>
    <string name="parkingReminders">Parking Reminders</string>
    <string name="amenities">Amenities</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="amexSpecialOffers">AMEX Special Offers</string>
    <string name="guestService">Guest Service</string>
    <string name="titleRestRoom">Restrooms</string>
    <string name="lockers">Lockers</string>
    <string name="rentalServices">Rental Services</string>
    <string name="atms">ATMs</string>
    <string name="restAreas">Service Animal Rest Areas</string>
    <string name="firstAid">First Aid</string>
    <string name="smoking">Smoking Permitted Areas</string>
    <string name="contactGuest">Contact Guest Services</string>
    <string name="serviceLocations">Guest Services Locations</string>
    <string name="recovery">Recovery email is sent on your registered email</string>
    <string name="explore_the">Explore the</string>
    <string name="resort_map">Resort Map</string>
    <string name="ok">OK</string>
    <string name="MyTicketAndpasses">My Tickets &amp; Passes</string>
    <string name="geron">Geron Ferlongue</string>
    <string name="d34441010100100101001001010">$D344410101001001001010</string>
    <string name="photo">Photo ID may be Requested</string>
    <string name="requested">Requested</string>
    <string name="ticket_details">TICKET DETAILS</string>
    <string name="_2018_3_park_explorer_adult_sc_y">2018-3 PARK EXPLORER ADULT SC Y</string>
    <string name="myWallet">My Wallet</string>
    <string name="parkTicket">PARK TICKET</string>
    <string name="scan">SCAN</string>
    <string name="purchase">PURCHASE</string>
    <string name="usedTickets">VIEW USED/EXPIRED TICKETS</string>
    <string name="orderId">Order Id</string>
    <string name="order">Please enter Order Id</string>
    <string name="tokendetails">For product details,restriction and terms of use,refer to your physical ticket media  and/or confirmation email</string>
    <string name="Mobile">Mobile no:</string>
    <string name="validMobile">Please enter valid Mobile no:</string>
    <string name="pleasecorrectcredentials">Please enter correct credentials</string>
    <string name="walletdetails">Wallet Details</string>
    <string name="forText">For:</string>
    <string name="ticketDetailsNumb">Ticket Number:</string>
    <string name="issued">Issued:</string>
    <string name="ViewDetails">View Details</string>
    <string name="alert">alert</string>
    <string name="profileMaking">profileMaking</string>
    <string name="emailcheck">\@</string>
    <string name="emailcomcheck">.com</string>
    <string name="hiText">Hi,</string>
    <string name="changeToolBarTittle">changeToolBarTittle</string>
    <string name="title">tittle</string>
    <string name="pleaseWait">Please wait</string>
    <string name="base64prefix">data:image/png;base64,</string>
    <string name="noAlert">No Alerts</string>
    <string name="alertdetails">Set an alert from any ride or show\'s detail page</string>
    <string name="newk">New?</string>
    <string name="choosepark">Choose a Park</string>
    <string name="guestAmen">GUEST AMENITIES</string>
    <string name="Shop">Shop</string>
    <string name="search">Search</string>
    <string name="goTham">GOTHAM-ULTRA.TTF</string>
    <string name="arialBold">Arial_Bold.ttf</string>
    <string name="arialDouble">Arial_Double_Bold.otf</string>
    <string name="arialItalic">ARIALI.TTF</string>
    <string name="arialMedium">Arial_Medium.otf</string>
    <string name="arialRegular">Arial_Regular.ttf</string>
    <string name="handel_gothic">handel gothic.ttf</string>
    <string name="handel__gothic">Handel_Gothic.ttf</string>
    <string name="typefaceAsset">handel gothic.ttf</string>

    <string name="typecustomer">customer</string>
    <string name="typeadult">adult</string>
    <string name="typekid">kid</string>

    <string name="datePattern">yyyy-MM-dd</string>
    <string name="x">x</string>
    <string name="hitAPi">hitApi</string>
    <string name="title_activity_my_wallet_screen">MyWalletScreenActivity</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="addPayment">Add Payment\nMethod</string>
    <string name="addticketspasses">Add Tickets &amp; Passes</string>
    <string name="add_pins">ADD PIN</string>
    <string name="receipt">RECEIPTS</string>
    <string name="spending">Spending limits</string>
    <string name="change">Change/Add Card</string>
    <string name="screenshotCapturing">screenshotCapturing</string>
    <string name="screenshot">screenshot</string>
    <string name="takenScreenshot">you have taken screenshot</string>
    <string name="screenShotKey">Screenshots</string>

    <string name="step_1"><b><b>Step 1:</b></b> Check the Park website for park hours, show schedules, terms and conditions.</string>
    <string name="step_2"><b>Step 2:</b> Download this eTicket and view on your mobile phone.</string>
    <string name="step_3"><b>Step 3:</b> Present this eTicket to parking attendant to receive free general parking.</string>
    <string name="Step_4"><b>Step 4:</b> Present this eTicket at Park Entrance to enter park.</string>

    <string name="six_flags_desc"><b>DIAMOND ELITE</b> All Parks Memb... </string>

    <string name="legal_terms">Valid for one visit and free general parking to one of the following parks: SeaWorld Orlando, Aquatica Orlando, SeaWorld San Antonio, Aquatica San Antonio, SeaWorld San Diego, Aquatica San Diego, Busch Gardens Tampa Bay, Adventure Island Tampa Bay, Busch Gardens Williamsburg, Water Country USA Williamsburg during regularly scheduled operating hours. This ticket is non-transferable, nonrefundable, not for resale, void if altered, will not be replaced if lost or stolen and may be confiscated without restitution for misuse. Valid only for the person listed on the eTicket. Photo ID may be required. Photocopies not accepted. Not valid for special events of Howl-O-Scream. Offer subject to change without notice.</string>

    <string name="text_login">Don’t have an order number yet? Please <u>click here</u> to sign up and place your order.</string>

    <string name="text_login_error">Login only active when in close proximity to the park.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="buy">Buy</string>
    <string name="map">Map</string>

</resources>
