<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSignIn"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"
        app:titleTextColor="@color/colorWhite">

        <cheap.thrills.fonts.TextViewArialDoubleBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forgotPassword11"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />

    </androidx.appcompat.widget.Toolbar>


    <cheap.thrills.fonts.TextViewArialMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:text="@string/enterEmailforgot"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17sdp" />

    <cheap.thrills.fonts.TextViewArialBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/emailAddress"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17sdp"

        android:textStyle="bold" />

    <cheap.thrills.fonts.EditTextArialMedium
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/roundedrectangles"
        android:imeOptions="actionNext"

        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="@dimen/_10sdp" />

    <cheap.thrills.fonts.ButtonArialMedium
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/roundedrectangles"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/Submit"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>



