<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAlert"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <cheap.thrills.fonts.TextViewGotham
            android:id="@+id/tvToolBarTittle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/alertTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivToy"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:src="@drawable/icon_toy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivToy"
            android:layout_margin="@dimen/_14sdp"
            android:orientation="vertical">


            <cheap.thrills.fonts.TextViewArialDoubleBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/noAlert"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <cheap.thrills.fonts.TextViewArialBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/alertdetails"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>